disable Delete button for Appointment & add weather widget
- Introduced `ShowAssignedColumnFilter` parameter in `OrdersGrid.razor` to control the visibility of the assigned person filter.
- Updated `MainLayout.razor` to include a weather widget, improving user interface functionality.
- Improved error handling in `ApiServiceClient.cs` for better API response processing.
- Added `WeatherWidget.razor` component to fetch and display weather information based on user location.
-fix warnings

--- a/BlazorTool.Client/Components/AppointmentEditor.razor
+++ b/BlazorTool.Client/Components/AppointmentEditor.razor
@@ -17,10 +17,10 @@
 
         <TelerikButton OnClick="@CancelEditing" ButtonType="ButtonType.Button">@CancelIcon @Localizer["AppointmentEditor_Cancel"]</TelerikButton>
 
-        @if(isScheduler)
+        @* @if(isScheduler)
         {
                 <TelerikButton OnClick="@DeleteAppointment" ButtonType="ButtonType.Button">@DeleteIcon @Localizer["AppointmentEditor_DeleteFromScheduler"]</TelerikButton>
-        }
+        } *@
 
         @if (!isWOClosed && UserState.HasPermission(PermissionType.WO_Close))
         {
