--- a/BlazorTool.Client/Layout/NavMenu.razor
+++ b/BlazorTool.Client/Layout/NavMenu.razor
@@ -16,7 +16,7 @@
         <div class="nav-item">
             <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="/" Match="NavLinkMatch.All">
                 <TelerikSvgIcon Icon="@SvgIcon.Home" Size="lg"></TelerikSvgIcon>
-                <span class="p-2">@Localizer["NavMenu_Main"]</span>
+                    <span class="p-2">@Localizer["My_Page"]</span>
             </NavLink>
         </div>
         <div class="nav-item">
