--- a/BlazorTool/Components/App.razor
+++ b/BlazorTool/Components/App.razor
@@ -7,6 +7,7 @@
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="weather.css"
     <link rel="stylesheet" href="BlazorTool.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="@RenderMode.InteractiveAuto" />
