--- a/BlazorTool.Client/Components/AddActivityForm.razor
+++ b/BlazorTool.Client/Components/AddActivityForm.razor
@@ -82,8 +82,8 @@
                     <Template>
                         <div style="display: flex; align-items: center;">
                             <label class="k-label k-form-label" style="min-width:@minWidthLabel; margin-right: 10px;">@Localizer["ActivityList_Description"]:</label>
-                                @* <TelerikTextArea @bind-Value="ActivityModel.Description" Rows="5" Placeholder="@Localizer["ActivityList_Description_Placeholder"]" /> *@
-                                <TelerikEditor @bind-Value="ActivityModel.Description" Tools="@customTools" Width="100%"/>
+                                <TelerikTextArea @bind-Value="ActivityModel.Description" Rows="5" Placeholder="@Localizer["ActivityList_Description_Placeholder"]" />
+                                @* <TelerikEditor @bind-Value="ActivityModel.Description" Tools="@customTools" Width="100%"/> *@
                         </div>
                         <ValidationMessage For="@(() => ActivityModel.Description)" />
                     </Template>
